fix mapper